automatically backed up by learn

--- a/app/views/figures/edit.erb
+++ b/app/views/figures/edit.erb
@@ -30,12 +30,12 @@
 
   <label>and/or create a New Landmark: </label>
 
-  <label>Landmark Name: </label>
+  <label>Add Landmark Name: </label>
   <input id= "new_landmark" type="text" name="landmark[name]">
 
   <br></br>
 
-  <label>Year completed:</label>
+  <label>Add Year completed:</label>
   <input type="text" name="landmark[year_completed]">
 
   <br></br>
