automatically backed up by learn

--- a/app/views/landmarks/show.erb
+++ b/app/views/landmarks/show.erb
@@ -1,4 +1,12 @@
-<h1>Landmark: <%= @landmark.name %></h1>
+<h1>Landmark:</h1>
 
-<h3>Year Completed: </h3>
-<%= @landmark.year_completed %>
+<table>
+  <tr>
+    <th>Name</th>
+    <th>Year Completed</th>
+  </tr>
+  <tr>
+    <td><%= @landmark.name %></td>
+    <td><%= @landmark.year_completed %></td>
+  </tr>
+<table>
