--- a/app/views/figures/edit.erb
+++ b/app/views/figures/edit.erb
@@ -10,7 +10,7 @@
 
   <label>Choose Figure Titles: </label>
   <% Title.all.each do |title| %>
-      <input id="<%= title.name %>" type="checkbox" name="figure[title_ids][]" value="<%= title.name %>"><%= 'checked' if @figure.titles_ids.include?(title.id) %><%= title.name %>
+      <input id="<%= title.name %>" type="checkbox" name="figure[title_ids][]" value="<%= title.id %>"><%= 'checked' if @figure.titles_ids.include?(title.id) %><%= title.name %>
   <% end %>
 
   <br></br>
