--- a/app/views/application/root.erb
+++ b/app/views/application/root.erb
@@ -4,6 +4,6 @@
 <ul>
   <li><a href="/landmarks/new">Create new landmark</a></li>
   <li><a href="/landmarks">View Landmarks</a></li>
-  <li><a href="/figures/new">Create new figure/a></li>
+  <li><a href="/figures/new">Create new figure</li>
   <li><a href="/figures">View Figures</a></li>
 </ul>
