--- a/app/views/application/root.erb
+++ b/app/views/application/root.erb
@@ -3,7 +3,7 @@
 <h3>Select from options:</h3>
 <ul>
   <li><a href="/landmarks/new">Create new landmark</a></li>
-  <li><a href="/landmarks">View Landmarks</a></li>
+  <li><a href="/landmarks">View Landmarks</a></li><br><br>
   <li><a href="/figures/new">Create new figure</li>
   <li><a href="/figures">View Figures</a></li>
 </ul>
