--- a/app/views/application/root.erb
+++ b/app/views/application/root.erb
@@ -1,6 +1,6 @@
 <h1>Welcome to Sinatra NYC</h1>
 
-<h2>Select from options:</h2>
+<h2>Select from options below:</h2>
 <ul>
   <h3>NYC Landmarks:</h3>
   <li><a href="/landmarks/new">Create new landmark</a></li>
