--- a/app/views/figures/index.erb
+++ b/app/views/figures/index.erb
@@ -2,6 +2,6 @@
 
 <ol>
 <% @figures.each do |figure| %>
-  <li><a href="/figures/<%= figure.id %>"><%= figure.name %></a></li>
+  <li><%= figure.name %></a></li>
 <% end %>
 </ol>
