--- a/app/views/landmarks/index.erb
+++ b/app/views/landmarks/index.erb
@@ -1,5 +1,9 @@
 <h1>Listing all Landmarks</h1>
 
+<% if @landmarks.length == 0 %>
+"Not working!!!"
+<% end %>
+
 <ol>
 <% @landmarks.each do |landmark| %>
   <li><a href="/landmarks/<%= landmark.id %>"><%= landmark.name %></a></li>
