automatically backed up by learn

--- a/app/views/figures/index.erb
+++ b/app/views/figures/index.erb
@@ -6,6 +6,6 @@
 
 <ol>
 <% @figures.each do |figure| %>
-  <li><%= figure.name %></a></li>
+  <li><a href='/figures/<%= figure.id %>'><%= figure.name %></a></li>
 <% end %>
 </ol>
