--- a/app/views/figures/show.erb
+++ b/app/views/figures/show.erb
@@ -1,11 +1,11 @@
 <h1>Figure: <%= @figure.name %></h1>
 
 <h3> Landmarks:</h3>
-<% @figures.landmarks.each do |landmark| %>
+<% @figure.landmarks.each do |landmark| %>
   <%= landmark.name %>
 <% end %>
 
 <h3> Titles:</h3>
-<% @figures.titles.each do |title| %>
+<% @figure.titles.each do |title| %>
   <%= title.name %>
 <% end %>
