automatically backed up by learn

--- a/app/views/figures/show.erb
+++ b/app/views/figures/show.erb
@@ -1,6 +1,6 @@
 <h1>Figure: <%= @figure.name %></h1>
 
-<% if @figures.length == 0 %>
+<% if @figure.titles.length == 0 %>
 "Not working!!!"
 <% end %>
 
