automatically backed up by learn

--- a/app/views/figures/show.erb
+++ b/app/views/figures/show.erb
@@ -1,11 +1,11 @@
 <h1>Figure: <%= @figure.name %></h1>
 
 <% if @figure.titles.length == 0 %>
-"Titles - Not working!!!"
+"Titles - Not working!"
 <% end %>
 
 <% if @figure.landmarks.length == 0 %>
-"Landmarks - Not working!!!"
+"Landmarks - Not working!"
 <% end %>
 
 <h3> Landmarks:</h3>
