automatically backed up by learn

--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,4 +1,4 @@
-<h1>Edit Landmarks: <%= @landmark.name %></h1>
+<h1>Edit Landmark: <%= @landmark.name %></h1>
 
 <form action="/landmarks/<%=@landmark.id%>" method="POST">
   <input id="hidden" type="hidden" name="_method" value="patch">
