--- a/app/views/figures/show.erb
+++ b/app/views/figures/show.erb
@@ -1,4 +1,4 @@
-<h1>Figure: <%= @figure.name %></h1>
+<h1>Figure: <a href='/figures/<%= figure.id %>'><%= @figure.name %></h1>
 
 <% if @figure.titles.length == 0 %>
 "Titles - Not working!"
