automatically backed up by learn

--- a/app/views/figures/show.erb
+++ b/app/views/figures/show.erb
@@ -4,7 +4,7 @@
 "Landmarks - Not working!"
 <% end %>
 
-<h2>Figure Landmarks's:</h2>
+<h2>Figure Landmarks:</h2>
 <% @figure.landmarks.each do |landmark|%>
   <%= landmark.name%>
 <% end %>
