--- a/app/views/figures/show.erb
+++ b/app/views/figures/show.erb
@@ -1,7 +1,7 @@
 <h2>Figure: <%=@figure.name%></h2>
 
 <h2>Figure Landmarks:</h2>
-<% @figure.landmarks_id.each do |landmark|%>
+<% @figure.landmarks.id.each do |landmark|%>
   <%= landmark.name%>
 <% end %>
 
