automatically backed up by learn

--- a/app/views/figures/show.erb
+++ b/app/views/figures/show.erb
@@ -1,7 +1,7 @@
 <h2>Figure: <%=@figure.name%></h2>
 
 <h2>Figure Landmarks:</h2>
-<% @figure.landmark.name.each do |landmark|%>
+<% @figure.landmarks.each do |landmark|%>
   <%= landmark.name%>
 <% end %>
 
