--- a/app/views/figures/show.erb
+++ b/app/views/figures/show.erb
@@ -2,7 +2,7 @@
 
 <h2>Figure Landmarks:</h2>
 <% @figure.landmarks.each do |landmark|%>
-  <%= landmark.name%>
+  <%= landmark.id%>
 <% end %>
 
 <% if @figure.landmarks.length == 0 %>
