--- a/app/views/figures/show.erb
+++ b/app/views/figures/show.erb
@@ -2,7 +2,7 @@
 
 <h2>Figure Landmarks:</h2>
 <% @figure = Figure.all %>
-<% @figure.landmark.each do |landmark|%>
+<% @figure.landmarks.each do |landmark|%>
   <%= landmark.name%>
 <% end %>
 
