--- a/app/views/figures/edit.erb
+++ b/app/views/figures/edit.erb
@@ -1,7 +1,7 @@
 <h1>Edit Figure: <%= @figure.name %></h1>
 
 <form action ="/figures/<%= @figure.id %>" method="POST">
-  <input id="hidden" type="hidden" name="_method" value="Patch">
+  <input id="hidden" type="hidden" name="_method" value="patch">
 
   <label>Figure Name: </label>
   <input id= "figure_name" type="text" name="figure[name]" value="<%= @figure.name %>">
