automatically backed up by learn

--- a/app/views/figures/edit.erb
+++ b/app/views/figures/edit.erb
@@ -1,6 +1,6 @@
 <h1>Edit Figure: <%= @figure.name %></h1>
 
-<form action ="/figures/<%= @figure.id %>" method="POST">
+<form action ="/figures/<%= @figure.id %>" method="post">
   <input id="hidden" type="hidden" name="_method" value="patch">
 
   <label>Figure Name: </label>
